--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,152 @@
+aiofiles==23.2.1
+aiogram==3.11.0
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.3
+aiosignal==1.3.1
+annotated-types==0.7.0
+ansible-base==2.10.8
+anyio==4.4.0
+apache-libcloud==3.2.0
+apturl==0.5.2
+argcomplete==1.8.1
 asgiref==3.8.1
+async-timeout==4.0.3
+attrs==21.2.0
+Babel==2.8.0
+bcrypt==3.2.0
+blinker==1.4
+Brlapi==0.8.3
+cachetools==5.0.0
+certifi==2024.7.4
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
+coloredlogs==15.0.1
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
 Django==5.0.7
 django-filter==24.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+dnspython==2.1.0
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
 drf-yasg==1.21.7
+duplicity==0.8.21
+exceptiongroup==1.2.2
+executor==23.2
+fasteners==0.14.1
+frozenlist==1.4.1
+future==0.18.2
+google-api-python-client==1.7.11
+google-auth==1.5.1
+google-auth-httplib2==0.1.0
+greenlet==1.1.2
+gunicorn==22.0.0
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.20.2
+httpx==0.27.0
+humanfriendly==10.0
+idna==3.3
+importlib-metadata==4.6.4
 inflection==0.5.1
+jeepney==0.7.1
+Jinja2==3.0.3
+jmespath==0.10.0
+jsonschema==3.2.0
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+magic-filter==1.0.12
+Mako==1.1.3
+MarkupSafe==2.0.1
+monotonic==1.6
+more-itertools==8.10.0
+multidict==6.0.5
+netaddr==0.8.0
+netifaces==0.11.0
+ntlm-auth==1.4.0
+oauth2client==4.1.3
+oauthlib==3.2.0
+olefile==0.46
 packaging==24.1
+paramiko==2.9.3
+pexpect==4.8.0
 pillow==10.4.0
+property-manager==3.0
+protobuf==3.12.4
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
+pycairo==1.20.1
+pycryptodomex==3.11.0
+pycups==2.0.1
+pydantic==2.8.2
+pydantic_core==2.20.1
+PyDrive==1.3.1
+PyGObject==3.42.1
 PyJWT==2.8.0
+pykerberos==1.1.14
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+pyrsistent==0.18.1
+pyTelegramBotAPI==4.21.0
+python-apt==2.4.0+ubuntu3
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==0.19.2
+python-telegram-bot==21.4
 pytz==2024.1
+pywinrm==0.3.0
+pyxdg==0.27
 PyYAML==6.0.1
+reportlab==3.6.8
+requests==2.25.1
+requests-kerberos==0.12.0
+requests-ntlm==1.1.0
+requests-toolbelt==0.9.1
+rsa==4.8
+SecretStorage==3.3.1
+selinux==3.3
+simplejson==3.17.6
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==1.4.31
 sqlparse==0.5.1
+systemd-python==234
+telegram==0.0.1
+texttable==1.6.4
 typing_extensions==4.12.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
 uritemplate==4.1.1
+urllib3==1.26.5
+usb-creator==0.3.7
+vboxapi==1.0
+verboselogs==1.7
+wadllib==1.3.6
+websocket-client==1.2.3
+xdg==5
+xkit==0.0.0
+xmltodict==0.12.0
+yarl==1.9.4
+zipp==1.0.0
